test_scores/negative_dimers/features/P14222.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P14222.pkl.xz